feat: implement database migration tool and update CI workflow
- Added a new Go script for automating database migrations, which reads SQL files and executes them against Supabase.
- Updated the backend CI workflow to run database migrations as part of the testing process, replacing the previous database connection verification steps.
- Enhanced logging and error handling in the migration process, providing fallback instructions for manual execution when necessary.
- Included a README for the migration tool detailing usage, environment variables, and integration with CI/CD.

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -314,14 +314,14 @@ jobs:
             echo "⚠️ Skipping Redis connection test - Redis not available"
           fi
 
-      - name: Verify database connection
+      - name: Run database migrations
         run: |
           # Set up Go environment explicitly
           export PATH="/bin:/usr/bin:/usr/local/bin:/usr/local/go/bin:/home/github-runner/go/bin:$PATH"
           export GOSUMDB="sum.golang.org"
           export GOPROXY="https://proxy.golang.org,direct"
           
-          echo "🗄️ Verifying database connection..."
+          echo "🗄️ Running database migrations..."
           echo "SUPABASE_URL: $SUPABASE_URL"
           echo "SUPABASE_API_KEY: $SUPABASE_API_KEY"
           
@@ -338,9 +338,8 @@ jobs:
             exit 1
           fi
           
-          echo "✅ Database secrets are configured"
-          echo "ℹ️ Database schema should be set up manually in Supabase Dashboard"
-          echo "ℹ️ See MIGRATION_GUIDE.md for detailed instructions"
+          # Run the migration script
+          go run cmd/migrate/main.go
         env:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_API_KEY: ${{ secrets.SUPABASE_API_KEY }}
@@ -434,14 +433,14 @@ jobs:
           echo "🔧 Setting up E2E test environment..."
           echo "Environment variables will be provided via GitHub Actions env"
 
-      - name: Verify database connection for E2E tests
+      - name: Run database migrations for E2E tests
         run: |
           # Set up Go environment explicitly
           export PATH="/bin:/usr/bin:/usr/local/bin:/usr/local/go/bin:/home/github-runner/go/bin:$PATH"
           export GOSUMDB="sum.golang.org"
           export GOPROXY="https://proxy.golang.org,direct"
           
-          echo "🗄️ Verifying database connection for E2E tests..."
+          echo "🗄️ Running database migrations for E2E tests..."
           echo "SUPABASE_URL: $SUPABASE_URL"
           echo "SUPABASE_API_KEY: $SUPABASE_API_KEY"
           
@@ -458,9 +457,8 @@ jobs:
             exit 1
           fi
           
-          echo "✅ Database secrets are configured for E2E tests"
-          echo "ℹ️ Database schema should be set up manually in Supabase Dashboard"
-          echo "ℹ️ See MIGRATION_GUIDE.md for detailed instructions"
+          # Run the migration script
+          go run cmd/migrate/main.go
         env:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_API_KEY: ${{ secrets.SUPABASE_API_KEY }}
