--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -127,14 +127,23 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build application
-        run: npm run build
-
-      - name: Start application
+      - name: Start application in development mode
         run: |
-          npm start &
-          sleep 10
-          echo "Application started"
+          npm run dev &
+          echo "Waiting for application to start..."
+          # Wait for the server to be ready
+          for i in {1..30}; do
+            if curl -f http://localhost:3000 >/dev/null 2>&1; then
+              echo "Application is ready!"
+              break
+            fi
+            echo "Waiting for application... ($i/30)"
+            sleep 2
+          done
+          
+          # Additional wait to ensure all routes are loaded
+          sleep 5
+          echo "Application started and ready for testing"
 
       - name: Run E2E tests
         run: npm run cypress:run
