refactor: streamline Snyk security scan step in CI workflow
- Simplified the Snyk security scan command in the frontend CI workflow by removing the unnecessary directory change, enhancing clarity and efficiency in the process.

--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -222,9 +222,7 @@ jobs:
         run: npm audit --audit-level=moderate
 
       - name: Run Snyk security scan
-        run: |
-          cd ${{ env.WORKING_DIRECTORY }}
-          snyk test --severity-threshold=high
+        run: snyk test --severity-threshold=high
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
