--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -5,7 +5,10 @@
     "prettier"
   ],
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint", "prettier"],
+  "plugins": [
+    "@typescript-eslint",
+    "prettier"
+  ],
   "rules": {
     "prettier/prettier": "error",
     "@typescript-eslint/no-unused-vars": [
