Add OAuth client secrets to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,6 @@ backend/internal/database/schema_v1_prod.sql
 backend/api/
 backend/bin/*
 backend/server
+
+# OAuth client secrets
+client_secret_*.json
