feat: add CORS configuration to backend
- Introduced ALLOWED_ORIGINS environment variable for specifying allowed origins for CORS.
- Updated Config struct to include AllowedOrigins field.
- Modified CORS middleware to utilize the AllowedOrigins from the configuration, enhancing flexibility for frontend domains.

--- a/backend/env.example
+++ b/backend/env.example
@@ -78,6 +78,13 @@ SESSION_SECRET=your-super-secret-session-key-change-this-in-production
 SESSION_MAX_AGE=86400
 
 # ===========================================
+# CORS CONFIGURATION
+# ===========================================
+# Comma-separated list of allowed origins for CORS
+# Include your frontend domains (both local and production)
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001,http://localhost:3002,http://127.0.0.1:3000,http://127.0.0.1:3001,http://127.0.0.1:3002,https://spark-park.dojima.foundation
+
+# ===========================================
 # TESTING CONFIGURATION
 # ===========================================
 # For running tests, you can override specific values:
